--- a/wware/develop/dannyanne/static/point.html
+++ b/wware/develop/dannyanne/static/point.html
@@ -7,8 +7,8 @@
 <meta http-equiv="Content-Script-Type" content="text/javascript" />
 <title>ダニー＆アン ( Danny&amp;Anne ) オフィシャルストア お届けについて</title>
 <link href="./css/guide.css" rel="stylesheet" type="text/css" media="screen,print" />
-<script src="./js/js-global/FancyZoom.js" type="text/javascript"></script>
-<script src="./js/js-global/FancyZoomHTML.js" type="text/javascript"></script> 
+<script src=".js/js-global/FancyZoom.js" type="text/javascript"></script>
+<script src=".js/js-global/FancyZoomHTML.js" type="text/javascript"></script> 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 <script type="text/javascript">
 $(function(){
@@ -30,12 +30,8 @@ $(function(){
 <!-- #header -->
 <div id="header">
 <a name="TOP" id="TOP"></a>
-<p id="logo"><a href="/store/"><img src="./images/logo.gif" alt="ダニー＆アン ( Danny&amp;Anne ) オフィシャルストア" width="200" height="90" /></a></p>
-<h1><a href="/store/"><img src="./images/head_title.gif" alt="ダニー＆アン ( Danny&amp;Anne ) オフィシャルストアご利用ガイド" width="400" height="40" /></a></h1>
+<h1><a href="http://dannyanne.com/store/static?page=index"><img src="./images/head_title.gif" alt="ダニー＆アン ( Danny&amp;Anne ) オフィシャルストアご利用ガイド" width="400" height="40" /></a></h1>
 <p id="forShop"><a href="http://dannyanne.com/store/" title="ダニー＆アン ( Danny&amp;Anne ) オフィシャルストアへ" target="_blank"><img src="./images/go_to_online.gif" alt="ダニー＆アン ( Danny&amp;Anne ) オフィシャルストアへ" width="220" height="20" /></a></p>
-
-
-<p title="ページを閉じる" class="clsBtn"><a href="#" onClick="window.close(); return false;"><img src="./images/close_a.gif" alt="ページを閉じる" width="65" height="28" class="mOver" /></a></p>
 </div>
 <!-- /#header -->
 <!-- /# ヘッダ ================================================================-->
@@ -49,96 +45,96 @@ $(function(){
 <!-- #leftContents -->
 <div id="leftContents"><!-- #guideMenuBlock -->
   <div id="guideMenuBlock">
-    <h2><a href="./index.html#TOP" title="ご利用ガイドトップページ"><img src="./images/side_top.gif" alt="ショッピングについて" width="200" height="33" /></a></h2>
+    <h2><a href="http://dannyanne.com/store/static?page=index#TOP" title="ご利用ガイドトップページ"><img src="./images/side_top.gif" alt="ショッピングについて" width="200" height="33" /></a></h2>
     <h3><img src="./images/side_titilebar_01.gif" alt="ダニー＆アン ( Danny&amp;Anne ) オフィシャルストアへようこそ" width="200" height="22" /></h3>
     <ul>
-      <li class="normal"><a href="./guidance.html#TOP" title="初めての方へ">初めての方へ</a>
+      <li class="normal"><a href="http://dannyanne.com/store/static?page=guidance#TOP" title="初めての方へ">初めての方へ</a>
           <!-- class="active", class="normal" -->
           <ul>
-            <li><a href="./guidance.html#SHOPPING" title="ショッピングガイド">ショッピングガイド</a></li>
-            <li><a href="./guidance.html#MEN" title="メンバー登録について">メンバー登録について</a></li>
-            <li><a href="./guidance.html#PAY" title="お届け・お支払いについて">お届け・お支払いについて</a></li>
-            <li><a href="./guidance.html#ESTABLISH" title="ご利用環境の設定について">ご利用環境の設定について</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=guidance#SHOPPING" title="ショッピングガイド">ショッピングガイド</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=guidance#MEN" title="メンバー登録について">メンバー登録について</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=guidance#PAY" title="お届け・お支払いについて">お届け・お支払いについて</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=guidance#ESTABLISH" title="ご利用環境の設定について">ご利用環境の設定について</a></li>
 
           </ul>
       </li>
-      <li class="normal"><a href="./information.html#TOP" title="ご利用について">ご利用について</a>
+      <li class="normal"><a href="http://dannyanne.com/store/static?page=information#TOP" title="ご利用について">ご利用について</a>
           <!-- class="active", class="normal" -->
           <ul>
-            <li><a href="./information.html#Justin" title="ご利用の前に">ご利用の前に</a></li>
-            <li><a href="./information.html#PRVC" title="プライバシーポリシー">プライバシーポリシー</a></li>
-            <li><a href="./information.html#DM" title="個人情報保護の取組みについて">個人情報保護の取組みについて</a></li>
-            <li><a href="./information.html#QA" title="Ｑ＆Ａ">Ｑ＆Ａ</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=information#Justin" title="ご利用の前に">ご利用の前に</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=information#PRVC" title="プライバシーポリシー">プライバシーポリシー</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=information#DM" title="個人情報保護の取組みについて">個人情報保護の取組みについて</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=information#QA" title="Ｑ＆Ａ">Ｑ＆Ａ</a></li>
           </ul>
       </li>
     </ul>
     <h3><img src="./images/side_titilebar_02.gif" alt="ショッピングについて" width="200" height="22" /></h3>
     <ul>
-      <li class="normal"><a href="./order.html#TOP" title="ご注文について">ご注文について</a>
+      <li class="normal"><a href="http://dannyanne.com/store/static?page=order#TOP" title="ご注文について">ご注文について</a>
           <!-- class="active", class="normal" -->
           <ul>
-            <li><a href="./order.html#ABOUT" title="ご注文について">ご注文について</a></li>
-            <li><a href="./order.html#RESEV" title="予約販売商品のご注文について">予約販売商品のご注文について</a></li>
-            <li><a href="./order.html#QUICK" title="インターネットからのご注文の手順">インターネットからのご注文の手順</a></li>
-            <li><a href="./order.html#CHECK" title="ご注文後の内容確認">ご注文後の内容確認</a></li>
-            <li><a href="./order.html#QA" title="Ｑ＆Ａ">Ｑ＆Ａ</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=order#ABOUT" title="ご注文について">ご注文について</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=order#RESEV" title="予約販売商品のご注文について">予約販売商品のご注文について</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=order#QUICK" title="インターネットからのご注文の手順">インターネットからのご注文の手順</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=order#CHECK" title="ご注文後の内容確認">ご注文後の内容確認</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=order#QA" title="Ｑ＆Ａ">Ｑ＆Ａ</a></li>
           </ul>
       </li>
-      <li class="normal"><a href="./payment.html#TOP" title="お支払いについて">お支払いについて</a>
+      <li class="normal"><a href="http://dannyanne.com/store/static?page=payment#TOP" title="お支払いについて">お支払いについて</a>
           <!-- class="active", class="normal" -->
           <ul>
-            <li><a href="./payment.html#TYPE" title="お支払い方法">お支払い方法</a></li>
-            <li><a href="./payment.html#COD" title="代金引換手数料について">代金引換手数料について</a></li>
-            <li><a href="./payment.html#CARD" title="各種クレジットカードについて">各種クレジットカードについて</a></li>
-            <li><a href="./payment.html#CARDMEM" title="クレジットカード情報の保持について">クレジットカード情報の保持について</a></li>
-            <li><a href="./payment.html#SCORD" title="セキュリティーコードについて">セキュリティーコードについて</a></li>
-            <li><a href="./payment.html#2CLIK" title="２クリックで購入">２クリックで購入</a></li>
-            <li><a href="./payment.html#TAX" title="消費税について">消費税について</a></li>
-            <li><a href="./payment.html#RECEIPT" title="領収書について">領収書について</a> </li>
-            <li><a href="./payment.html#QA" title="Ｑ＆Ａ">Ｑ＆Ａ</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=payment#TYPE" title="お支払い方法">お支払い方法</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=payment#COD" title="代金引換手数料について">代金引換手数料について</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=payment#CARD" title="各種クレジットカードについて">各種クレジットカードについて</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=payment#CARDMEM" title="クレジットカード情報の保持について">クレジットカード情報の保持について</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=payment#SCORD" title="セキュリティーコードについて">セキュリティーコードについて</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=payment#2CLIK" title="２クリックで購入">２クリックで購入</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=payment#TAX" title="消費税について">消費税について</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=payment#RECEIPT" title="領収書について">領収書について</a> </li>
+            <li><a href="http://dannyanne.com/store/static?page=payment#QA" title="Ｑ＆Ａ">Ｑ＆Ａ</a></li>
           </ul>
       </li>
-      <li class="normal"><a href="./deliver.html#TOP" title="お届けについて">お届けについて</a>
+      <li class="normal"><a href="http://dannyanne.com/store/static?page=deliver#TOP" title="お届けについて">お届けについて</a>
           <!-- class="active", class="normal" -->
           <ul>
-            <li><a href="./deliver.html#DAY" title="お届け日数">お届け日数</a></li>
-            <li><a href="./deliver.html#FEE" title="配送料について">配送料について</a></li>
-            <li><a href="./deliver.html#SERVICE" title="便利なお届けサービス">便利なお届けサービス</a></li>
-            <li><a href="./deliver.html#TIME" title="お届け日時の指定">お届け日時の指定</a></li>
-            <li><a href="./deliver.html#NOTICE" title="お届け上の注意">お届け上の注意</a></li>
-            <li><a href="./deliver.html#QA" title="Ｑ＆Ａ">Ｑ＆Ａ</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=deliver#DAY" title="お届け日数">お届け日数</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=deliver#FEE" title="配送料について">配送料について</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=deliver#SERVICE" title="便利なお届けサービス">便利なお届けサービス</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=deliver#TIME" title="お届け日時の指定">お届け日時の指定</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=deliver#NOTICE" title="お届け上の注意">お届け上の注意</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=deliver#QA" title="Ｑ＆Ａ">Ｑ＆Ａ</a></li>
           </ul>      </li>
-      <li class="normal"><a href="./cancel.html#TOP" title="返品・交換について">返品・交換について</a>
+      <li class="normal"><a href="http://dannyanne.com/store/static?page=cancel#TOP" title="返品・交換について">返品・交換について</a>
           <!-- class="active", class="normal" -->
           <ul>
-            <li><a href="./cancel.html#RETURN" title="商品の返品・交換について">商品の返品・交換について</a></li>
-            <li><a href="./cancel.html#CANCEL" title="ご注文の取消・変更について">ご注文の取消・変更について</a></li>
-            <li><a href="./cancel.html#ATT" title="商品ご返送時の注意">商品ご返送時の注意</a></li>
-            <li><a href="./cancel.html#QA" title="Ｑ＆Ａ">Ｑ＆Ａ</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=cancel#RETURN" title="商品の返品・交換について">商品の返品・交換について</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=cancel#CANCEL" title="ご注文の取消・変更について">ご注文の取消・変更について</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=cancel#ATT" title="商品ご返送時の注意">商品ご返送時の注意</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=cancel#QA" title="Ｑ＆Ａ">Ｑ＆Ａ</a></li>
           </ul>
       </li>
-      <li class="normal"><a href="./size.html#TOP" title="サイズガイドについて">サイズガイドについて</a>
+      <li class="normal"><a href="http://dannyanne.com/store/static?page=size#TOP" title="サイズガイドについて">サイズガイドについて</a>
           <!-- class="active", class="normal" -->
           <ul>
-            <li><a href="./size.html#TOPS" title="トップス">トップス</a></li>
-            <li><a href="./size.html#BOTTOMS" title="ボトムス">ボトムス</a></li>
-            <li><a href="./size.html#DRESS" title="ワンピース">ワンピース</a></li>
-            <li><a href="./size.html#ACCESS" title="アクセサリー">アクセサリー</a></li>
-            <li><a href="./size.html#GOODS" title="ファッショングッズ">ファッショングッズ</a></li>
-            <li><a href="./size.html#SHOSE" title="靴">靴</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=size#TOPS" title="トップス">トップス</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=size#BOTTOMS" title="ボトムス">ボトムス</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=size#DRESS" title="ワンピース">ワンピース</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=size#ACCESS" title="アクセサリー">アクセサリー</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=size#GOODS" title="ファッショングッズ">ファッショングッズ</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=size#SHOSE" title="靴">靴</a></li>
           </ul>
       </li>
     </ul>
     <h3><img src="./images/side_titilebar_03.gif" alt="会員登録・お客様情報について" width="200" height="22" /></h3>
     <ul>
-      <li class="normal"><a href="./member.html#TOP" title="会員登録・変更・規約について">会員登録・変更・規約について</a>
+      <li class="normal"><a href="http://dannyanne.com/store/static?page=member#TOP" title="会員登録・変更・規約について">会員登録・変更・規約について</a>
           <!-- class="active", class="normal" -->
           <ul>
-            <li><a href="./member.html#ABOUT" title="会員登録について">会員登録について</a></li>
-            <li><a href="./member.html#HOWTO" title="会員登録の手順">会員登録の手順</a></li>
-            <li><a href="./member.html#CHANGE" title="会員情報の変更">会員情報の変更・退会</a></li>
-            <li><a href="./member.html#RULE" title="会員規約">会員規約</a></li>
-            <li><a href="./member.html#QA" title="Ｑ＆Ａ">Ｑ＆Ａ</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=member#ABOUT" title="会員登録について">会員登録について</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=member#HOWTO" title="会員登録の手順">会員登録の手順</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=member#CHANGE" title="会員情報の変更">会員情報の変更・退会</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=member#RULE" title="会員規約">会員規約</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=member#QA" title="Ｑ＆Ａ">Ｑ＆Ａ</a></li>
           </ul>
       </li>
 	  <li class="active"><a href="#TOP" title="ポイントについて">ポイントについて</a>
@@ -150,25 +146,25 @@ $(function(){
             <li><a href="#NOTICE" title="ポイントの注意">ポイントの注意</a></li>
           </ul>
       </li>
-      <li class="normal"><a href="./mailmagazine.html#TOP" title="メールマガジンについて">メールマガジンについて</a>
+      <li class="normal"><a href="http://dannyanne.com/store/static?page=mailmagazine#TOP" title="メールマガジンについて">メールマガジンについて</a>
           <!-- class="active", class="normal" -->
           <ul>
-            <li><a href="./mailmagazine.html#ABOUT" title="メールマガジンとは？">メールマガジンとは？</a></li>
-            <li><a href="./mailmagazine.html#ENTRY" title="メールマガジンのお申込">メールマガジンのお申込</a></li>
-            <li><a href="./mailmagazine.html#CHANGE" title="登録情報の変更・配信解除">登録情報の変更・配信解除</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=mailmagazine#ABOUT" title="メールマガジンとは？">メールマガジンとは？</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=mailmagazine#ENTRY" title="メールマガジンのお申込">メールマガジンのお申込</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=mailmagazine#CHANGE" title="登録情報の変更・配信解除">登録情報の変更・配信解除</a></li>
           </ul>
       </li>
-      <li class="normal"><a href="./reminder.html#TOP" title="ID・パスワードをお忘れの場合">ID・パスワードをお忘れの場合</a>
+      <li class="normal"><a href="http://dannyanne.com/store/static?page=reminder#TOP" title="ID・パスワードをお忘れの場合">ID・パスワードをお忘れの場合</a>
           <!-- class="active", class="normal" -->
           <ul>
-            <li><a href="./reminder.html#WHAT" title="IDを忘れてしまった場合">IDを忘れてしまった場合</a></li>
-            <li><a href="./reminder.html#PASS" title="パスワードを忘れてしまった場合">パスワードを忘れてしまった場合</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=reminder#WHAT" title="IDを忘れてしまった場合">IDを忘れてしまった場合</a></li>
+            <li><a href="http://dannyanne.com/store/static?page=reminder#PASS" title="パスワードを忘れてしまった場合">パスワードを忘れてしまった場合</a></li>
           </ul>
       </li>
     </ul>
     <h3><img src="./images/side_titilebar_04.gif" alt="Q&A" width="200" height="22" /></h3>
     <ul>
-      <li class="normal"><a href="./qa.html#TOP" title="Q&amp;A一覧へ">Q&amp;A一覧へ</a></li>
+      <li class="normal"><a href="http://dannyanne.com/store/static?page=qa#TOP" title="Q&amp;A一覧へ">Q&amp;A一覧へ</a></li>
       <!-- class="active", class="normal" -->
     </ul>
     <h3><img src="./images/side_titilebar_05.gif" alt="お問い合わせ" width="200" height="22" /></h3>
@@ -188,7 +184,7 @@ $(function(){
 <div id="mainContentsInner">
 <!-- #topicPath -->
 <ul class="clearfix" id="topicPath">
-<li><a href="./index.html" title="ご利用ガイドトップ">ご利用ガイドトップ</a><span>＞</span></li>
+<li><a href="http://dannyanne.com/store/static?page=index" title="ご利用ガイドトップ">ご利用ガイドトップ</a><span>＞</span></li>
 
 <li>お届けについて</li>
 </ul>
@@ -200,10 +196,10 @@ $(function(){
 <!-- #inLink -->
 <ul id="inLink"  class="triple clearfix">
 <!-- class="normal clearfix",class="double clearfix",class="triple clearfix" -->
-<li><a href="./deliver.html#WHEN" title="ポイントはいつもらえるの？">ポイントはいつもらえるの？</a></li>
-<li><a href="./deliver.html#HOWTO" title="ポイント使用方法">ポイント使用方法</a></li>
-<li><a href="./deliver.html#WHERE" title="ポイント有効期限">ポイント有効期限</a></li>
-<li><a href="./deliver.html#NOTICE" title="ポイントの注意">ポイント使用上の注意</a></li>
+<li><a href="http://dannyanne.com/store/static?page=deliver#WHEN" title="ポイントはいつもらえるの？">ポイントはいつもらえるの？</a></li>
+<li><a href="http://dannyanne.com/store/static?page=deliver#HOWTO" title="ポイント使用方法">ポイント使用方法</a></li>
+<li><a href="http://dannyanne.com/store/static?page=deliver#WHERE" title="ポイント有効期限">ポイント有効期限</a></li>
+<li><a href="http://dannyanne.com/store/static?page=deliver#NOTICE" title="ポイントの注意">ポイント使用上の注意</a></li>
 </ul>
 <!-- /#inLink -->
 
@@ -322,24 +318,7 @@ $(function(){
 <!-- /#mainContentsArea -->
 <!-- /# メインコンテンツエリア================================================================-->
 
-<!-- # フッダ================================================================-->
 
-<!-- #footer -->
-<div id="footer">
-<p id="copyright">Copyright 2012 AIIA Corporation All Rights Reserved.</p>
-<p title="ページを閉じる" class="clsBtn"><a href="#" onClick="window.close(); return false;"><img src="./images/close_a.gif" alt="ページを閉じる" width="65" height="28" class="mOver" /></a></p>
-<!--eCRM-->
-<script type="text/javascript">
-<!-- var etc_data = "NOT";
-var server="01";
-//-->
-</script>
-<script type="text/javascript" src="./js/SpecialPage.js"></script>
-<script type="text/javascript" src="./js/lib.js"></script>
-<!--/eCRM-->
-</div>
-<!-- /#footer -->
-<!-- /# フッダ================================================================-->
 </div>
 <!-- /#container -->
 
